--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>孙小思的小空间</title>
+		<title>发现美的地方</title>
 		<style type="text/css">
 			body{
-				background-image: url(SS.jpg);
+				background-image: url(BJT.jpg);
 				background-size: 100% 100%;
 				height: 90%;
 			}
@@ -16,27 +16,27 @@
 	</head>
 	<body>
 		<h1 align="center">
-			<p>
-				<font color="pink">除了成为更好的自己，</font>
-			</p>
-			<p>
-				<font color="pink">你不应该渴望成为任何人!</font>
-			</p>
+			<img src="1.jpg"/width="150" hspace="50">
+			<img src="2.jpg"/width="150" hspace="50"><br />	
+			<img src="3.jpg"/width="150" hspace="5">
+			<img src="4.jpg"/width="150" hspace="5">
+			<img src="12.jpg"/width="150" hspace="5">
+			<img src="6.jpg"/width="150" hspace="5"><br />
+			<img src="7.jpg"/width="150" hspace="5">
+			<img src="8.jpg"/width="150" hspace="5">
+			<img src="9.jpg"/width="150" hspace="5"><br />
+			<img src="10.jpg"/width="150" hspace="5">
+			<img src="11.jpg"/width="150" hspace="5"><br />
+			<img src="5.jpg"/width="150" hspace="5">
 		</h1>
 		<h2 align="center">
-			<img src="../ZP/5.jpg"/ width="166" hspace="15">
-			<img src="../ZP/SSEWM.jpg"/ width="166">
+			<strong>
+				<em>
+					余生没那么长，<br />
+					请你忠于自己，<br />
+					活的还像自己。
+				</em>
+			</strong>
 		</h2>
-		<h3 align="center">
-			<p>
-				<font color="yellow">柳轻颂 - 溯（钢琴版）（翻自 CORSAK胡梦周）</font>
-			</p>
-			<audio src="SU.mp3" autoplay="autoplay" controls="controls">溯</audio>
-		</h3>
-		<h4 align="center">
-			<a href="SSZPQ.html" target="_blank">
-				<font color="orange">发现美的地方</font>
-			</a>
-		</h4>
 	</body>
 </html>
