--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>发现美的地方</title>
 		<style type="text/css">
 			body{
-				background-image: url(BJT.jpg);
+				background-image: url(BJ.jpg);
 				background-size: 100% 100%;
 				height: 90%;
 			}
